# ultimate-fastapi-boilerplate

./: .pre-commit-config.bak.yaml  README.md  docker-compose.yml  gunicorn_startup.sh  pyproject.toml  uvicorn_startup.sh
docker/: Dockerfile
docs/: step-by-step.md
requirements/: base.txt  dev.txt
src/: __main__.py
src/app/: main.py
