[tool.poetry]
name = "ultimate-fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["zhuyudong <yudong8.zhu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
asgi-lifespan = "^2.1.0"
bcrypt = "^4.1.3"
beanie = "^1.26.0"
blinker = "^1.8.2"
boto3 = "^1.34.132"
botocore = "^1.34.132"
colorama = "^0.4.6"
colorlog = "^6.8.2"
croniter = "^2.0.5"
cryptography = "^42.0.8"
emails = "^0.6"
fastapi = "^0.111.0"
fastapi-cache2 = "^0.2.1"
fastapi-limiter = "^0.1.6"
fastapi-mail = "^1.4.1"
filterpy = "^1.4.5"
grpcio = "^1.64.1"
gunicorn = "^22.0.0"
httpx = "^0.27.0"
jsonschema = "^4.22.0"
locust = "^2.29.1"
loguru = "^0.7.2"
matplotlib = "^3.9.0"
mimesis = "^17.0.0"
minio = "^7.2.7"
msgpack = "^1.0.8"
mypy = "^1.10.1"
mypy-extensions = "^1.0.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
passlib = "^1.7.4"
protobuf = "^5.27.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
pydash = "^8.0.1"
pyjwt = "^2.8.0"
pymysql = "^1.1.1"
python-decouple = "^3.8"
pyupgrade = "^3.16.0"
pyyaml = "^6.0.1"
raven = "^6.10.0"
redis = "^5.0.6"
requests = "^2.32.3"
rich = "^13.7.1"
ruff = "^0.4.10"
scipy = "^1.14.0"
sqlalchemy = "^2.0.31"
sqlalchemy-stubs = "^0.4"
sqlmodel = "^0.0.19"
stackprinter = "^0.2.12"
starlette = "^0.37.2"
structlog = "^24.2.0"
tenacity = "^8.4.2"
types-protobuf = "^5.26.0.20240422"
ua-parser = "^0.18.0"
user-agents = "^2.2.0"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
add-trailing-comma = "^3.1.0"
autoflake = "^2.3.1"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"
mypy-extensions = "^1.0.0"
pip-upgrader = "^1.4.15"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pyupgrade = "^3.16.0"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
